tests/testfiles/passing/invalid_identifiers/keyword_as_id_int.c
/* Keyword as identifier: int */
int main() {
    int int;
}